# vehicle_bot

./: CMakeLists.txt  README.md  package.xml
config/: actual_bot.rviz  actual_bot2.rviz  actual_dd.rviz  ball_track_params.yaml  detect_setting.txt  gazebo_params.yaml  joystick.yaml  mapper_params_online_async.yaml  mapper_params_realrobot.yaml  my_controllers.yaml  nav2_params_mod.yaml  nav2_test.rviz  trackable_bot.rviz  twist_mux.yaml  view_bot.rviz
description/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
launch/: Tmini_launch.py  camera.launch.py  gazebo_model.launch.py  joy_bridge.launch.py  joystick.launch.py  key_cont.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py  tele_key.launch.py
parameters/: bridge_parameters.yaml  gz_bridge.yaml  gz_bridge_4sim.yaml
worlds/: camera_sensor.sdf  tennis_ball.sdf  test.sdf  vehicle_test.sdf
